--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,27 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+@keyframes image_gallery_left {
+  0% {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(-50%, 0);
+  }
+  100% {
+    transform: translate(-50%, 0);
+  }
+}
+
+@keyframes image_gallery_right {
+  0% {
+    transform: translate(-50%, 0);
+  }
+  50% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
